// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attributes.melody.twig 1`] = `
<a href="#abcd"  target="_blank"   lang="en" >Link</a>

<a href="{{ url }}">
    Next
</a>~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<a href="#abcd" target="_blank" lang="en">Link</a>



<a href="{{ url }}">
    Next
</a>
`;

exports[`children.melody.twig 1`] = `
<div class="{{ css.loader }}">
    <div class="{{ css.barWrapper }}">
        <span class="{{ css.bar }}"></span>
    </div>
    <strong class="{{ css.text }}">{{ 'checking_deals' }}</strong>
</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div class="{{ css.loader }}">
    
    <div class="{{ css.barWrapper }}">
        
        <span class="{{ css.bar }}"></span>

    </div>
    <strong class="{{ css.text }}">{{ checking_deals }}</strong>

</div>


`;

exports[`extraSpaces.melody.twig 1`] = `
<span  >Text</span >~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<span>Text</span>
`;

exports[`manyAttributes.melody.twig 1`] = `
<span attr1="one" attr2="two" attr3="three" attr4="four" attr5="five" attr6="six" attr7="seven" attr8="eight">Text</span>~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<span
    attr1="one"
    attr2="two"
    attr3="three"
    attr4="four"
    attr5="five"
    attr6="six"
    attr7="seven"
    attr8="eight">
    Text
</span>
`;

exports[`selfClosing.melody.twig 1`] = `
<input type="text" name="user" />

<input attr1="one" attr2="two" attr3="three" attr4="four" attr5="five" attr6="six" attr7="seven" attr8="eight" />

<input type="text" name="user" /><input type="text" name="password" /><input type="text" name="password2" />~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<input type="text" name="user" />



<input
    attr1="one"
    attr2="two"
    attr3="three"
    attr4="four"
    attr5="five"
    attr6="six"
    attr7="seven"
    attr8="eight" />



<input type="text" name="user" />
<input type="text" name="password" />
<input type="text" name="password2" />
`;
